--- a/home.html
+++ b/home.html
@@ -9,8 +9,8 @@
     <title>Login | Jobsphere</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/index.css">
-    <script src="./assets/js/app.js" type="module"></script>
+    <link rel="stylesheet" href="./assets/css/home.css">
+    <script src="./assets/js/home.js" type="module"></script>
   </head>
   <body>
     <main>
