randomusers generating succcsful and README.md created

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Dupanshu">
     <meta name="description" content="Job Finder">
     <meta name="keywords" content="html, css,APIs, javascript">
-    <title>Login | Jobsphere</title>
+    <title>Home | Jobsphere</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/home.css">
