--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="html, css,APIs, javascript">
     <title>Home | Jobsphere</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/home.css">
     <script src="./assets/js/home.js" type="module"></script>
   </head>
