made better improvements in the design og login page

--- a/home.html
+++ b/home.html
@@ -14,9 +14,42 @@
   </head>
   <body>
     <main>
-      <div class="container">
-
+      <header class="flex">
+        <div class="container">
+          <div class="flex">
+            <div class="logo"></div>
+            <nav>
+              <ul class="flex">
+                <li class="home"><i class="fa-solid fa-house"></i></li>
+                <li><i class="fa-solid fa-bell"></i></li>
+                <li><i class="fa-solid fa-message"></i></li>
+                <li><i class="fa-solid fa-gear"></i></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <div class="columns flex container">
+        <div class="column1"></div>
+        <div class="column2"></div>
+        <div class="column3">
+          <p>People you may know</p>
+        </div>
       </div>
+      <section class="contact flex" id="contact">
+        <div class="box container">
+          <div class="icon flex">
+            <div class="flex">
+              <a href="#"><i class="fa-solid fa-envelope"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <div class="footer">&copy; Jobsphere 2024 | Thanks for visiting.</div class="footer">
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
