--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
           <button class="login">Login</button>
           <button class="register">Sign up</button>
         </div>
+        <div class="bottom">
+          <p>or login with <span class="blue">Google Facebook</span></p>
+        </div>
       </div>
     </main>
   </body>
