search bar, logos etc

--- a/home.html
+++ b/home.html
@@ -18,20 +18,29 @@
         <div class="container">
           <div class="flex">
             <div class="logo"></div>
+            <div class="bar"><i class="fa-solid fa-magnifying-glass"></i> Search</div>
             <nav>
               <ul class="flex">
-                <li class="home"><i class="fa-solid fa-house"></i></li>
-                <li><i class="fa-solid fa-bell"></i></li>
-                <li><i class="fa-solid fa-message"></i></li>
-                <li><i class="fa-solid fa-gear"></i></li>
+                <li class="home"><i class="fa-solid fa-house"></i> Home</li>
+                <li><i class="fa-solid fa-bell"></i> Notification</li>
+                <li><i class="fa-solid fa-message"></i> Messaging</li>
+                <li><i class="fa-solid fa-gear"></i> Settings</li>
               </ul>
             </nav>
           </div>
         </div>
       </header>
-      <div class="columns flex container">
-        <div class="column1"></div>
-        <div class="column2"></div>
+      <div class="column grid container">
+        <div class="column1">
+          <div class="clm1-bg">
+            <div class="clm1-img"></div>
+          </div>
+          <div class="clm1-des">
+            <h2>Dupanshu</h2>
+            <p class=""></p>
+          </div>
+        </div>
+        <div class="column2">column2</div>
         <div class="column3">
           <p>People you may know</p>
         </div>
