colum1, column2 done starting home.js

--- a/home.html
+++ b/home.html
@@ -37,10 +37,26 @@
           </div>
           <div class="clm1-des">
             <h2>Dupanshu</h2>
-            <p class=""></p>
+            <p class="under">Software Developer Winnipeg</p>
+          </div>
+          <hr>
+          <div class="under-un">
+            <p>Profile viewers <span class="hi">13</span></p>
+            <p>Post impressions <span>130</span></p>
+          </div>
+          <hr>
+        </div>
+        <div class="column2">
+          <div class="flex">
+            <div class="clm2-img"></div>
+            <input type='text' placeholder='Start a post...' class='post'>
+          </div>
+          <div class="media flex">
+            <div><i class="fa-solid fa-photo-film"></i> Media</div>
+            <div><i class="fa-solid fa-calendar"></i> Events</div>
+            <div><i class="fa-solid fa-newspaper"></i> Article</div>
           </div>
         </div>
-        <div class="column2">column2</div>
         <div class="column3">
           <p>People you may know</p>
         </div>
