better view portview fixed and profile image created

--- a/home.html
+++ b/home.html
@@ -18,13 +18,13 @@
         <div class="container">
           <div class="flex">
             <div class="logo"></div>
-            <div class="bar"><i class="fa-solid fa-magnifying-glass"></i> Search</div>
+            <div class="bar"><i class="fa-solid fa-magnifying-glass"></i><input type="search"></div>
             <nav>
               <ul class="flex">
-                <li class="home"><i class="fa-solid fa-house"></i> Home</li>
-                <li><i class="fa-solid fa-bell"></i> Notification</li>
-                <li><i class="fa-solid fa-message"></i> Messaging</li>
-                <li><i class="fa-solid fa-gear"></i> Settings</li>
+                <li><i class="fa-solid fa-house home"><p class="home"> Home</p></i></li>
+                <li><i class="fa-solid fa-message"><p> Messaging</p></i></li>
+                <li><i class="fa-solid fa-bell"><p> Notfications</p></i></li>
+                <li><div class="profile"></div></li>
               </ul>
             </nav>
           </div>
