chaned column colors, made scroll better to look,

--- a/home.html
+++ b/home.html
@@ -59,6 +59,7 @@
         </div>
         <div class="column3">
           <p>People you may know</p>
+          <div class="people"></div>
         </div>
       </div>
       <section class="contact flex" id="contact">
