hover problem solved, p centered

--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
               <a href="#"><i class="fa-brands fa-facebook"></i></a>
               <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <div class="footer">&copy; Jobsphere 2024 | Thanks for visiting.</div class="footer">
+            <div class="footer">2024 &copy; Jobsphere | Thanks for visiting.</div class="footer">
             </div>
           </div>
         </div>
