profine name changed in column1

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
             <div class="clm1-img"></div>
           </div>
           <div class="clm1-des">
-            <h2>Dupanshu</h2>
+            <p class="p-name">Dupanshu</h2>
             <p class="under">Software Developer Winnipeg</p>
           </div>
           <hr>
